<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="user_app_name">DevStories Africa</string>
    <string name="admin_app_name">DevStories Africa Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="existing_user">Already have an account? Login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tv_verify">Verify Email</string>
    <string name="tv_backButton_accessibility">Back button</string>
    <string name="tv_code_sent">We have sent the code verification\n to your email</string>
    <string name="tv_code">Verification Code</string>
    <string name="verify">Verify</string>

    <string name="back_button_text">Back</string>
    <string name="reset_password_heading">Reset Password</string>
    <string name="info_string_reset_password">Enter the email associated with your account and we’ll send an email with instructions to reset your password</string>
    <string name="email_address_heading_reset_password">Email Address</string>
    <string name="send_instructions_reset_password">Send Instructions</string>
    <string name="email_field_error_message">email field should not be empty</string>
    <string name="envelope_image_content_desc">envelope image</string>
    <string name="check_your_email_text">Check Your Email</string>
    <string name="confirmation_message_text">We have sent a password recover instructions to your email</string>
    <string name="open_email_app_button_text">Open Email App</string>
    <string name="text_for_skip_button">Skip I\'ll confirm later</string>

    <string name="or_sign_up_with">Or sign up with</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="description_text">This month\'s session will be on Career Change Management. Are you looking to make a leap in your career? Join the session to learn how to hit the ground running and get the most out of your career change.</string>
    <string name="logout_string">Logout</string>
</resources>