<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.fragments.EmailConfirmationFragment">

    <ImageView
        android:id="@+id/envelopeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:contentDescription="@string/envelope_image_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/undraw_mail" />

    <TextView
        android:id="@+id/confirmationHeading"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/check_your_email_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/envelopeImage"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/envelopeImage"
        app:layout_constraintTop_toBottomOf="@+id/envelopeImage" />

    <TextView
        android:id="@+id/confirmationMess"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/confirmation_message_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="@+id/confirmationHeading"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmationHeading"
        app:layout_constraintTop_toBottomOf="@+id/confirmationHeading" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenEmail"
        style="@style/Theme.DevStoriesAfrica.CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_48sdp"
        android:fontFamily="@font/source_sans_pro"
        android:text="@string/open_email_app_button_text"
        android:textColor="@color/white"
        app:backgroundTint="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/confirmationMess"
        app:layout_constraintStart_toStartOf="@+id/confirmationMess"
        app:layout_constraintTop_toBottomOf="@+id/confirmationMess" />

    <Button
        android:id="@+id/btnSkipEmailCheck"
        style="@style/Theme.DevStoriesAfrica.CustomTextButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_for_skip_button"
        app:layout_constraintEnd_toEndOf="@+id/btnOpenEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnOpenEmail"
        app:layout_constraintTop_toBottomOf="@+id/btnOpenEmail" />

    <TextView
        android:id="@+id/bottomMessageTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/source_sans_pro"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSkipEmailCheck"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>